Fixed issues with zone layout; Fixed layout issue for floats by introducing clearfix

--- a/forgeCalendar/forgeCalendar/css/dforge.forgeCalendar.css
+++ b/forgeCalendar/forgeCalendar/css/dforge.forgeCalendar.css
@@ -1,10 +1,20 @@
 ﻿.calendar.week {
+    font-family: 'Arial', Gadget, sans-serif;
     width: 100%;
     background-color: #565656;
     -webkit-border-radius-: 4px 4px 0 0;
     -moz-border-radius: 4px 4px 0 0;
     border-radius: 4px 4px 0 0;
 }
+
+    .calendar.week .clearfix:before, .calendar.week .clearfix:after {
+        content: "";
+        display: table;
+    }
+
+    .calendar.week .clearfix:after {
+        clear: both;
+    }
 
     .calendar.week.disabled {
     }
@@ -41,6 +51,7 @@
     }
 
     .calendar.week .day.titleContainer {
+        font-family: 'Arial Black', Gadget, sans-serif;
         width: 100%;
         overflow-y: scroll; /* unused but forced to display: matches up with the internal scrollbar for time*/
         -ms-scrollbar-track-color: #565656;
@@ -184,7 +195,6 @@
             white-space: nowrap;
             text-overflow: ellipsis;
         }
-
 
             .calendar.week .day .event .header .right {
                 float: right;
